# lprlib

./: .gitignore  README.md
lpr_daemon/: CMakeLists.txt  Makefile
lpr_daemon/doc/: CMakeLists.txt  README
lpr_daemon/src/: CMakeLists.txt  liblpr_daemon.pc.in  lpr_daemon.vala  lpr_daemon_neu.vala
lpr_daemon/tests/: CMakeLists.txt  test_lpr_daemon.vala
lpr_send/: CMakeLists.txt  Makefile
lpr_send/doc/: CMakeLists.txt  README
lpr_send/src/: CMakeLists.txt  liblpr_send.pc.in  lpr_send.vala
lpr_send/tests/: CMakeLists.txt  test_lpr_send.vala
