project (lpr_daemon)
cmake_minimum_required (VERSION 2.6)
cmake_policy (VERSION 2.8)
list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
option(ICON_UPDATE "Update the icon cache after installing" ON)
option(BUILD_VALADOC "Build API documentation if Valadoc is available" OFF)

set( LPR_DAEMON_MAJOR 1 )
set( LPR_DAEMON_MINOR 0 )
set( LPR_DAEMON_RELEASE 0 )
set( LPR_DAEMON_NAME lpr_daemon-${LPR_DAEMON_MAJOR}.${LPR_DAEMON_MINOR} )
set( LPR_DAEMON_VERSION ${LPR_DAEMON_MAJOR}.${LPR_DAEMON_MINOR}.${LPR_DAEMON_RELEASE} )

set(HAVE_VALADOC OFF)
if(BUILD_VALADOC)
	find_package(Valadoc)
	if(VALADOC_FOUND)
		set(HAVE_VALADOC ON)
		include(Valadoc)
	else()
		message("Valadoc not found, will not build documentation")
	endif()
endif()

find_package(PkgConfig)

set (VALA_PACKAGES ${VALA_PACKAGES} gio-2.0)
set (VALA_PACKAGES ${VALA_PACKAGES} glib-2.0)
set (VALA_PACKAGES ${VALA_PACKAGES} gobject-2.0)
set (VALA_PACKAGES ${VALA_PACKAGES} dmtestlib-1.0)
set (VALA_PACKAGES ${VALA_PACKAGES} posix)
set (VALA_PACKAGES ${VALA_PACKAGES} zlib)
set (VALA_PACKAGES ${VALA_PACKAGES} open_dmlib-1.0)
set (VALA_PACKAGES ${VALA_PACKAGES} dm_logger-1.0)
set (VALA_ARGS --thread -g --vapidir=${CMAKE_INSTALL_PREFIX}/share/vala/vapi)

set (MODULES_TO_CHECK glib-2.0 MagickWand gobject-2.0 gio-2.0 gthread-2.0 open_dmlib-1.0 dm_logger-1.0 dmtestlib-1.0)
pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})

add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(doc)
